--- a/my-electron-app/index.html
+++ b/my-electron-app/index.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8" />
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <meta
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
-    <title>Hello World!</title>
+    <title>Dialog</title>
   </head>
   <body>
     <!-- <h1>Hello from Electron renderer!</h1>
@@ -20,8 +16,10 @@
         Chromium <span id="chrome-version"></span>,
         and Electron <span id="electron-version"></span>.
     </p> -->
-    Title: <input id="title"/>
-    <button id="btn" type="button">Set</button>
+    <!-- Title: <input id="title"/>
+    <button id="btn" type="button">Set</button> -->
+    <button id="btn" type="button">Open a File</button>
+    File Path: <strong id="filePath"></strong>
   </body>
   <script src="./renderer.js"></script>
 </html>
